Feb-26-2000 - Kurt Granroth (v0.6)
  o Converted to use the new XML UI framework (big change!)

Jan-12-2000 - Kurt Granroth (v0.5.2)
  o Use KAboutData and KCmdLineArgs

Dec-28-1999 - Kurt Granroth (v0.5.1)
  o The po Makefile now uses the autogenerated rules.  I don't know
    why I didn't notice that capability before

Dec-25-1999 - Kurt Granroth (v0.5)
  o Use standard actions instead of constructing everything manually
    (big change!)
  o Allow .po files to be installed in $DESTDIR
  o Added .spec file for RPM fans

Dec-05-1999 - Kurt Granroth (v0.4.5)
  o Changed 'QCString' to QString in DCOP iface stuff...

Nov-29-1999 - Kurt Granroth (v0.4.4)
  o Added sample DCOP client for app
  o Fixed .desktop file
  o Made QPrinter a member var so settings are saved

Nov-26-1999 - Kurt Granroth (v0.4.3)
  o Beefed up the print function with more boilerplate stuff
  o KAccel keys should now work

Nov-20-1999 - Kurt Granroth (v0.4.2)
  o Use mkinstalldirs instead of mkdir

Nov-04-1999 - Kurt Granroth (v0.4.1)
  o Removed a few files from common/ that are in admin/ (missing,
    install-sh, mkinstalldirs)
  o Renamed .png files to "proper" naming convention
  o Got rid of admin/ directory from CVS.  It is now copied over from
    the common admin directory (found in kdesdk/admin).  This should
    prevent a lot of redundent updates

Nov-02-1999 - Kurt Granroth (v0.4)
  o Updated for KDE 2.x.  The produced application now has a LOT more
    functionality than before -- it is a scriptable web browser (see
    dcopclient.py for more info on that)!

Jan-24-1999 - Kurt Granroth (v0.3.2)
  o Added LIB_X11 and LIB_QT to acinclude.m4

Jan-18-1999 - Kurt Granroth (v0.3.1)
  o AUGH!! I forgot 'acinclude.m4'!!
  o Slightly modified 'install-me' so that kapptemplate will install from
    CVS.  It was wigging out when it tried to cp the CVS directory...
  
Jan-01-1999 - Kurt Granroth (v0.3)
  o Added kapptemplate to kdesdk
  o HUGE clean-up of code