@@ -1,4 +1,4 @@
-KAppTemplate v0.6
+KAppTemplate v0.6.1
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
