@@ -1,7 +1,7 @@
 Begin3
 Title:          KAppTemplate
-Version:        0.6
-Entered-date:   26Feb00
+Version:        0.6.1
+Entered-date:   14Mar00
 Description:    Shell script that will automatically create a KTMainWindow-
                 based KDE 2.0 app framework with user input.
 Keywords:       KDE application generator 2.0
@@ -9,8 +9,8 @@ Author:         Kurt Granroth <granroth@kde.org>
 Maintained-by:  Kurt Granroth <granroth@kde.org>
 Home-page:      http://www.pobox.com/~kurt_granroth/kapptemplate
 Primary-site:   cvs.kde.org:/home/kde/kdesdk/kapptemplate
-                xxxxxx  kapptemplate-0.6.tar.gz
-                xxx     kapptemplate-0.6.lsm
+                xxxxxx  kapptemplate-0.6.1.tar.gz
+                xxx     kapptemplate-0.6.1.lsm
 Platform:       Unix
 Copying-policy: GPL
 End
